fixed spacing for masthead

--- a/_sass/_ed.scss
+++ b/_sass/_ed.scss
@@ -311,7 +311,7 @@ tbody tr:nth-child(odd) th {
   background-color: #ffffff;
   z-index: 9999999;
   opacity: 1;
-  padding-top: .5rem;
+  padding-top: .3rem;
 
 
   #name {
